--- a/uetool/src/main/res/values/strings.xml
+++ b/uetool/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <string name="uet_name">UETool</string>
   <string name="uet_target_element_not_found">could not found view in (%1$.0f , %2$.0f), please select view again</string>
   <string name="uet_coming_soon">coming soon</string>
   <string name="uet_enable_edit_attr">edit attribution is enabled, please select view which you want</string>
