--- a/uetool/src/main/res/values-en/strings.xml
+++ b/uetool/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="catch_view">catch</string>
-  <string name="relative_location">location</string>
-  <string name="grid">gridding</string>
+  <string name="uet_catch_view">catch</string>
+  <string name="uet_relative_location">location</string>
+  <string name="uet_grid">gridding</string>
 </resources>
