--- a/uetool/src/main/res/values/strings.xml
+++ b/uetool/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="uet_target_element_not_found">could not found view in (%1$.0f , %2$.0f), please select view again</string>
     <string name="uet_coming_soon">coming soon</string>
     <string name="uet_disable">DESABLE_UETOOL</string>
-    <string name="catch_view">catch</string>
-    <string name="relative_location">location</string>
-    <string name="grid">gridding</string>
+    <string name="uet_catch_view">catch</string>
+    <string name="uet_relative_location">location</string>
+    <string name="uet_grid">gridding</string>
 </resources>
